# docs/generated/swagger/spec.json
@@ -1079,10 +1079,34 @@
       "type": "object",
       "properties": {
         "queries_per_second": {
-          "description": "Queries per second served by this range.\n\nNote that queries per second will only be known by the leaseholder.\nAll other replicas will report it as 0.",
+          "description": "Queries per second served by this range.\n\nBatch requests per second served by this range.",
           "type": "number",
           "format": "double",
           "x-go-name": "QueriesPerSecond"
+        },
+        "read_bytes_per_second": {
+          "description": "Reads (bytes) per second served by this range.",
+          "type": "number",
+          "format": "double",
+          "x-go-name": "ReadBytesPerSecond"
+        },
+        "reads_per_second": {
+          "description": "Reads per second served by this range.",
+          "type": "number",
+          "format": "double",
+          "x-go-name": "ReadsPerSecond"
+        },
+        "requests_per_second": {
+          "description": "Requests per second served by this range.",
+          "type": "number",
+          "format": "double",
+          "x-go-name": "RequestsPerSecond"
+        },
+        "write_bytes_per_second": {
+          "description": "Writes (bytes) per second served by this range.",
+          "type": "number",
+          "format": "double",
+          "x-go-name": "WriteBytesPerSecond"
         },
         "writes_per_second": {
           "description": "Writes per second served by this range.",
